<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/mlrs_mlrs_mainpageBlue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textSize="25sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textColor="@color/Black"
        android:id="@+id/dialogTitle"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/dialogTitle"
        android:hint="@string/email"
        android:id="@+id/email_password_reset"
        android:inputType="textEmailAddress"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:background="@color/mlrs_white_button"/>

    <TextView
        android:layout_width="106dp"
        android:layout_height="33dp"
        android:textSize="20sp"
        android:radius="15dp"
        android:text="@string/confirm"
        android:textAlignment="center"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="25dp"
        android:id="@+id/dialogConfirm"
        android:textColor="@color/mlrs_white_button"
        android:background="@color/mlrs_white_button"
        android:backgroundTint="@color/common_google_signin_btn_text_light"
        android:layout_below="@+id/email_password_reset"/>


</RelativeLayout>