<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:backgroundTint="@color/mlrs_blue">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:layout_width="345dp"
                    android:layout_height="276dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:contentDescription="@string/mlrs_login_logo"
                    android:src="@drawable/mlrs_login_logo" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
                    android:backgroundTint="@color/mlrs_white_button"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@color/mlrs_lightBlue"
                    android:textColorHint="@color/mlrs_lightBlue"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"

                    android:backgroundTint="@color/mlrs_white_button"
                    android:hint="@string/password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textColor="@color/mlrs_lightBlue"
                    android:textColorHint="@color/mlrs_lightBlue"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnEmail_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:backgroundTint="@color/mlrs_white_button"
                    android:text="SIGN IN"
                    android:textColor="@color/Black"
                    android:textColorHint="@color/Black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/relLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="122dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="#F6F2F1"
                    android:backgroundTint="@color/mlrs_lightBlue">


                    <TextView
                        android:id="@+id/tvlink_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/register"
                        android:textColor="@color/mlrs_white_button"
                        android:textColorHint="@android:color/holo_orange_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/tvforgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvlink_register"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/forgot_password"
                        android:textColor="@color/mlrs_white_button"
                        android:textColorHint="@android:color/holo_orange_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvresend_verification_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvforgot_password"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/resend_verification_email"
                        android:textColor="@color/mlrs_white_button"
                        android:textColorHint="@android:color/holo_orange_dark"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </RelativeLayout>

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/blue_button" />

            </LinearLayout>

        </ScrollView>
        <ProgressBar
            android:layout_height="150dp"
            android:layout_width="150dp"
            android:id="@+id/progressBar"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>