<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mlrs_mlrs_mainpageBlue">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_settings"
                    android:textSize="25sp"
                    android:textColor="@color/Black"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:id="@+id/textHeader"/>


                <EditText
                    android:id="@+id/et_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="30dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/prompt_email"
                    android:layout_below="@+id/textHeader"
                    android:background="@color/mlrs_white_button"/>


                <EditText
                    android:id="@+id/et_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/current_password"
                    android:layout_below="@+id/et_input_email"
                    android:background="@color/mlrs_white_button"/>




                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_below="@+id/et_input_password"
                    android:text="Save"
                    android:background="@color/mlrs_white_button"
                    />


                <TextView android:id="@+id/change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Change Password"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textColor="@color/linkBlue"
                    android:layout_below="@+id/btn_save"
                    android:layout_centerHorizontal="true"
                    android:background="@color/mlrs_white_button"/>

            </RelativeLayout>



        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/progressBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>

</RelativeLayout>